update scripts (partial)

--- a/vars.env
+++ b/vars.env
@@ -18,6 +18,7 @@ CONFIG_FILE=$CONSENSUS_DIR/config.yaml
 # 1 Giga Eth
 INITIAL_BALANCE=1000000000000000000000000000
 
+EL_BOOTNODE_PORT=30305
 EL_BOOT_KEY_FILE=$EXECUTION_DIR/boot.key
 EL_BOOT_LOG_FILE=$EXECUTION_DIR/bootnode.log
 
