update scripts (partial)

--- a/vars.env
+++ b/vars.env
@@ -1,5 +1,5 @@
-NODE_COUNT=${NODE_COUNT:-2}
-VALIDATOR_COUNT=${VALIDATOR_COUNT:-10}
+NODE_COUNT=${NODE_COUNT:-3}
+VALIDATOR_COUNT=${VALIDATOR_COUNT:-12}
 ROOT=${ROOT:-./data}
 BUILD_DIR=${BUILD_DIR:-./build}
 GETH_CMD=${GETH_CMD:-geth}
@@ -18,14 +18,17 @@ CONFIG_FILE=$CONSENSUS_DIR/config.yaml
 # 1 Giga Eth
 INITIAL_BALANCE=1000000000000000000000000000
 
+EL_BOOTNODE_IP_ADDR=127.0.0.1
 EL_BOOTNODE_PORT=30305
 EL_BOOT_KEY_FILE=$EXECUTION_DIR/boot.key
 EL_BOOT_LOG_FILE=$EXECUTION_DIR/bootnode.log
 
+CL_BOOTNODE_IP_ADDR=127.0.0.1
 CL_BOOTNODE_PORT=4011
 CL_BOOT_LOG_FILE=$CONSENSUS_DIR/bootnode.log
 CL_BOOTNODE_DIR=$CONSENSUS_DIR/bootnode
 
+SIGNER_IP_ADDR=127.0.0.1
 SIGNER_PORT=3011
 SIGNER_RPC_PORT=3012
 SIGNER_HTTP_PORT=3013
