update scripts dist (up to execution layer setup)

--- a/vars.env
+++ b/vars.env
@@ -2,14 +2,15 @@ default_passwd=adslabcuhk
 
 NODE_COUNT=${NODE_COUNT:-3}
 VALIDATOR_COUNT=${VALIDATOR_COUNT:-12}
-ROOT=${ROOT:-./data}
-BUILD_DIR=${BUILD_DIR:-./build}
+PROJ_DIR=${PROJ_DIR:-"$( realpath "./"; )"}
+ROOT=${ROOT:-$PROJ_DIR/data}
+BUILD_DIR=${BUILD_DIR:-$PROJ_DIR/build}
 GETH_CMD=${GETH_CMD:-geth}
 LIGHTHOUSE_CMD=${LIGHTHOUSE_CMD:-lighthouse}
 
-GENESIS_TEMPLATE_FILE=./assets/genesis.template.json
-CONFIG_TEMPLATE_FILE=./assets/config.template.yaml
-NETWORK_ID=616161
+GENESIS_TEMPLATE_FILE=$PROJ_DIR/assets/genesis.template.json
+CONFIG_TEMPLATE_FILE=$PROJ_DIR/assets/config.template.yaml
+NETWORK_ID=108118
 
 CONSENSUS_DIR=$ROOT/consensus
 EXECUTION_DIR=$ROOT/execution
