update dist (pending fix for validator beacon nodes)

--- a/vars.env
+++ b/vars.env
@@ -39,9 +39,10 @@ SIGNER_EL_DATADIR=$ROOT/signer/ethereum
 
 BASE_EL_PORT=21000
 BASE_EL_RPC_PORT=8600
+BASE_EL_HTTP_PORT=9600
 
 BASE_CL_PORT=31000
-BASE_CL_HTTP_PORT=9600
+BASE_CL_HTTP_PORT=10600
 
 # NOTE: If you change the number of nodes and validators, you may also
 # have to change TERMINAL_TOTAL_DIFFICULTY and GENESIS_DELAY because
